1.格式化代码 2.使用ProcessBuilder替代Runntime来实现控制台命令的模拟